--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -80,6 +80,18 @@
 		    <artifactId>log4j-slf4j-impl</artifactId>
 		    <version>2.8</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.4.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>6.0.6</version>
+		</dependency>
 		
 	</dependencies>
 	<build>
